fix height on mobile

--- a/src/pages/Home/styles.module.scss
+++ b/src/pages/Home/styles.module.scss
@@ -294,6 +294,7 @@
     
     .htmlContainer {
         width: calc(100% - 40px);
+        top: 80vh;
     }
 
     .detailsContainer { 
